// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`financial report query optimization preserves all totals > preserves the complete report for all 1`] = `
{
  "avgCheckTjs": 3001.2,
  "avgCheckUsd": 300.12,
  "cogsTjs": 3282164.1,
  "cogsUsd": 328216.41,
  "daily": [
    {
      "date": "2026-09-15",
      "profitUsd": 225805.11,
      "revenueUsd": 554021.52,
      "salesCount": 1846,
    },
  ],
  "exchangesCount": 0,
  "expensesTjs": 24680,
  "expensesUsd": 2460,
  "freeDeviceBonusesInStock": 1,
  "giftDeviceProfitTjs": 615246,
  "giftDeviceProfitUsd": 61524.6,
  "giftDeviceUnitsSold": 205,
  "grossMarginPercent": 40.8,
  "grossProfitTjs": 2258051.1,
  "grossProfitUsd": 225805.11,
  "mainWarehouseCashTjs": 345.67,
  "mainWarehouseCashUsd": 34.57,
  "mainWarehouseExpenses": {
    "expensesByCategory": [],
    "expensesTjs": 0,
    "expensesUsd": 0,
    "unpaidExpensesTjs": 0,
  },
  "mainWarehouseStockCostTjs": 1000.1,
  "mainWarehouseStockCostUsd": 100.01,
  "mainWarehouseStockCount": 2,
  "modelCounts": [
    {
      "cogsUsd": 46802.34,
      "count": 264,
      "name": "Phone M2",
      "profitUsd": 32429.34,
      "revenueUsd": 79231.68,
    },
    {
      "cogsUsd": 46802.34,
      "count": 264,
      "name": "Phone M4",
      "profitUsd": 32429.34,
      "revenueUsd": 79231.68,
    },
    {
      "cogsUsd": 46602.33,
      "count": 263,
      "name": "Phone M6",
      "profitUsd": 32329.23,
      "revenueUsd": 78931.56,
    },
    {
      "cogsUsd": 47002.35,
      "count": 264,
      "name": "Phone M1",
      "profitUsd": 32229.33,
      "revenueUsd": 79231.68,
    },
    {
      "cogsUsd": 47002.35,
      "count": 264,
      "name": "Phone M3",
      "profitUsd": 32229.33,
      "revenueUsd": 79231.68,
    },
    {
      "cogsUsd": 47002.35,
      "count": 264,
      "name": "Phone M0",
      "profitUsd": 32229.33,
      "revenueUsd": 79231.68,
    },
    {
      "cogsUsd": 47002.35,
      "count": 263,
      "name": "Phone M5",
      "profitUsd": 31929.21,
      "revenueUsd": 78931.56,
    },
  ],
  "netProfitTjs": 2235520.3,
  "netProfitUsd": 223560.03,
  "periodCashBonusesTjs": 255,
  "periodCashBonusesUsd": 25.5,
  "periodFreeDeviceBonusesReceived": 1,
  "periodRefundPenaltiesTjs": 1894.2,
  "periodRefundPenaltiesUsd": 189.42,
  "profitTjs": 2259945.3,
  "profitUsd": 225994.53,
  "refundsCount": 154,
  "refundsRevenueUsd": 46218.48,
  "revenueTjs": 5540215.2,
  "revenueUsd": 554021.52,
  "salesCount": 1846,
  "sellers": [
    {
      "profitUsd": 61667.76,
      "revenueUsd": 184873.92,
      "salesCount": 616,
      "sellerId": "seller-1",
      "sellerName": "Seller 1",
      "unitsSold": 616,
    },
    {
      "profitUsd": 61567.65,
      "revenueUsd": 184573.8,
      "salesCount": 615,
      "sellerId": "seller-2",
      "sellerName": "Seller 2",
      "unitsSold": 615,
    },
    {
      "profitUsd": 102569.7,
      "revenueUsd": 184573.8,
      "salesCount": 615,
      "sellerId": "seller-0",
      "sellerName": "Seller 0",
      "unitsSold": 615,
    },
  ],
  "storeBreakdown": [
    {
      "avgCheckTjs": 3001.2,
      "avgCheckUsd": 300.12,
      "cashCollectedTjs": 0,
      "cashCollectionsCount": 0,
      "cashTjs": 1001,
      "cogsTjs": 166008.3,
      "cogsUsd": 16600.83,
      "daily": [
        {
          "date": "2026-09-15",
          "profitUsd": 11310.33,
          "revenueUsd": 27911.16,
          "salesCount": 93,
        },
      ],
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "grossMarginPercent": 40.6,
      "netProfitTjs": 111955.4,
      "netProfitUsd": 11195.94,
      "profitTjs": 113189.4,
      "profitUsd": 11318.94,
      "refundPenaltiesUsd": 8.61,
      "refundsCount": 7,
      "revenueTjs": 279111.6,
      "revenueUsd": 27911.16,
      "salesCount": 93,
      "sellers": [
        {
          "profitUsd": 3203.52,
          "revenueUsd": 9603.84,
          "salesCount": 32,
          "sellerId": "seller-1",
          "sellerName": "Seller 1",
          "unitsSold": 32,
        },
        {
          "profitUsd": 5103.51,
          "revenueUsd": 9303.72,
          "salesCount": 31,
          "sellerId": "seller-0",
          "sellerName": "Seller 0",
          "unitsSold": 31,
        },
        {
          "profitUsd": 3003.3,
          "revenueUsd": 9003.6,
          "salesCount": 30,
          "sellerId": "seller-2",
          "sellerName": "Seller 2",
          "unitsSold": 30,
        },
      ],
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-1",
      "storeName": "Store 1",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M0",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 14,
          "name": "Phone M1",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M5",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M4",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M6",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M3",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M2",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 93,
      "unpaidExpensesTjs": 0,
    },
    {
      "avgCheckTjs": 3001.2,
      "avgCheckUsd": 300.12,
      "cashCollectedTjs": 0,
      "cashCollectionsCount": 0,
      "cashTjs": 1002,
      "cogsTjs": 166008.3,
      "cogsUsd": 16600.83,
      "daily": [
        {
          "date": "2026-09-15",
          "profitUsd": 11310.33,
          "revenueUsd": 27911.16,
          "salesCount": 93,
        },
      ],
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "grossMarginPercent": 40.6,
      "netProfitTjs": 111955.4,
      "netProfitUsd": 11195.94,
      "profitTjs": 113189.4,
      "profitUsd": 11318.94,
      "refundPenaltiesUsd": 8.61,
      "refundsCount": 7,
      "revenueTjs": 279111.6,
      "revenueUsd": 27911.16,
      "salesCount": 93,
      "sellers": [
        {
          "profitUsd": 3103.41,
          "revenueUsd": 9303.72,
          "salesCount": 31,
          "sellerId": "seller-2",
          "sellerName": "Seller 2",
          "unitsSold": 31,
        },
        {
          "profitUsd": 3103.41,
          "revenueUsd": 9303.72,
          "salesCount": 31,
          "sellerId": "seller-1",
          "sellerName": "Seller 1",
          "unitsSold": 31,
        },
        {
          "profitUsd": 5103.51,
          "revenueUsd": 9303.72,
          "salesCount": 31,
          "sellerId": "seller-0",
          "sellerName": "Seller 0",
          "unitsSold": 31,
        },
      ],
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-2",
      "storeName": "Store 2",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M1",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 14,
          "name": "Phone M2",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M6",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M4",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M0",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M5",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M3",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 93,
      "unpaidExpensesTjs": 0,
    },
    {
      "avgCheckTjs": 3001.2,
      "avgCheckUsd": 300.12,
      "cashCollectedTjs": 0,
      "cashCollectionsCount": 0,
      "cashTjs": 1007,
      "cogsTjs": 166008.3,
      "cogsUsd": 16600.83,
      "daily": [
        {
          "date": "2026-09-15",
          "profitUsd": 11310.33,
          "revenueUsd": 27911.16,
          "salesCount": 93,
        },
      ],
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "grossMarginPercent": 40.6,
      "netProfitTjs": 111955.4,
      "netProfitUsd": 11195.94,
      "profitTjs": 113189.4,
      "profitUsd": 11318.94,
      "refundPenaltiesUsd": 8.61,
      "refundsCount": 7,
      "revenueTjs": 279111.6,
      "revenueUsd": 27911.16,
      "salesCount": 93,
      "sellers": [
        {
          "profitUsd": 3103.41,
          "revenueUsd": 9303.72,
          "salesCount": 31,
          "sellerId": "seller-1",
          "sellerName": "Seller 1",
          "unitsSold": 31,
        },
        {
          "profitUsd": 5103.51,
          "revenueUsd": 9303.72,
          "salesCount": 31,
          "sellerId": "seller-0",
          "sellerName": "Seller 0",
          "unitsSold": 31,
        },
        {
          "profitUsd": 3103.41,
          "revenueUsd": 9303.72,
          "salesCount": 31,
          "sellerId": "seller-2",
          "sellerName": "Seller 2",
          "unitsSold": 31,
        },
      ],
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-7",
      "storeName": "Store 7",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M0",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 14,
          "name": "Phone M6",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M4",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M2",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M5",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M3",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M1",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 93,
      "unpaidExpensesTjs": 0,
    },
    {
      "avgCheckTjs": 3001.2,
      "avgCheckUsd": 300.12,
      "cashCollectedTjs": 0,
      "cashCollectionsCount": 0,
      "cashTjs": 1008,
      "cogsTjs": 166008.3,
      "cogsUsd": 16600.83,
      "daily": [
        {
          "date": "2026-09-15",
          "profitUsd": 11310.33,
          "revenueUsd": 27911.16,
          "salesCount": 93,
        },
      ],
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "grossMarginPercent": 40.6,
      "netProfitTjs": 111955.4,
      "netProfitUsd": 11195.94,
      "profitTjs": 113189.4,
      "profitUsd": 11318.94,
      "refundPenaltiesUsd": 8.61,
      "refundsCount": 7,
      "revenueTjs": 279111.6,
      "revenueUsd": 27911.16,
      "salesCount": 93,
      "sellers": [
        {
          "profitUsd": 3203.52,
          "revenueUsd": 9603.84,
          "salesCount": 32,
          "sellerId": "seller-2",
          "sellerName": "Seller 2",
          "unitsSold": 32,
        },
        {
          "profitUsd": 5103.51,
          "revenueUsd": 9303.72,
          "salesCount": 31,
          "sellerId": "seller-0",
          "sellerName": "Seller 0",
          "unitsSold": 31,
        },
        {
          "profitUsd": 3003.3,
          "revenueUsd": 9003.6,
          "salesCount": 30,
          "sellerId": "seller-1",
          "sellerName": "Seller 1",
          "unitsSold": 30,
        },
      ],
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-8",
      "storeName": "Store 8",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M1",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 14,
          "name": "Phone M0",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M4",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M3",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M6",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M5",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M2",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 93,
      "unpaidExpensesTjs": 0,
    },
    {
      "avgCheckTjs": 3001.2,
      "avgCheckUsd": 300.12,
      "cashCollectedTjs": 0,
      "cashCollectionsCount": 0,
      "cashTjs": 1014,
      "cogsTjs": 166008.3,
      "cogsUsd": 16600.83,
      "daily": [
        {
          "date": "2026-09-15",
          "profitUsd": 11310.33,
          "revenueUsd": 27911.16,
          "salesCount": 93,
        },
      ],
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "grossMarginPercent": 40.6,
      "netProfitTjs": 111955.4,
      "netProfitUsd": 11195.94,
      "profitTjs": 113189.4,
      "profitUsd": 11318.94,
      "refundPenaltiesUsd": 8.61,
      "refundsCount": 7,
      "revenueTjs": 279111.6,
      "revenueUsd": 27911.16,
      "salesCount": 93,
      "sellers": [
        {
          "profitUsd": 3203.52,
          "revenueUsd": 9603.84,
          "salesCount": 32,
          "sellerId": "seller-2",
          "sellerName": "Seller 2",
          "unitsSold": 32,
        },
        {
          "profitUsd": 3103.41,
          "revenueUsd": 9303.72,
          "salesCount": 31,
          "sellerId": "seller-1",
          "sellerName": "Seller 1",
          "unitsSold": 31,
        },
        {
          "profitUsd": 5003.4,
          "revenueUsd": 9003.6,
          "salesCount": 30,
          "sellerId": "seller-0",
          "sellerName": "Seller 0",
          "unitsSold": 30,
        },
      ],
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-14",
      "storeName": "Store 14",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M6",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 14,
          "name": "Phone M0",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M5",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M1",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M4",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M3",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M2",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 93,
      "unpaidExpensesTjs": 0,
    },
    {
      "avgCheckTjs": 3001.2,
      "avgCheckUsd": 300.12,
      "cashCollectedTjs": 0,
      "cashCollectionsCount": 0,
      "cashTjs": 1015,
      "cogsTjs": 166008.3,
      "cogsUsd": 16600.83,
      "daily": [
        {
          "date": "2026-09-15",
          "profitUsd": 11310.33,
          "revenueUsd": 27911.16,
          "salesCount": 93,
        },
      ],
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "grossMarginPercent": 40.6,
      "netProfitTjs": 111955.4,
      "netProfitUsd": 11195.94,
      "profitTjs": 113189.4,
      "profitUsd": 11318.94,
      "refundPenaltiesUsd": 8.61,
      "refundsCount": 7,
      "revenueTjs": 279111.6,
      "revenueUsd": 27911.16,
      "salesCount": 93,
      "sellers": [
        {
          "profitUsd": 5103.51,
          "revenueUsd": 9303.72,
          "salesCount": 31,
          "sellerId": "seller-0",
          "sellerName": "Seller 0",
          "unitsSold": 31,
        },
        {
          "profitUsd": 3103.41,
          "revenueUsd": 9303.72,
          "salesCount": 31,
          "sellerId": "seller-2",
          "sellerName": "Seller 2",
          "unitsSold": 31,
        },
        {
          "profitUsd": 3103.41,
          "revenueUsd": 9303.72,
          "salesCount": 31,
          "sellerId": "seller-1",
          "sellerName": "Seller 1",
          "unitsSold": 31,
        },
      ],
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-15",
      "storeName": "Store 15",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M0",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 14,
          "name": "Phone M1",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M3",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M2",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M6",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M5",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M4",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 93,
      "unpaidExpensesTjs": 0,
    },
    {
      "avgCheckTjs": 3001.2,
      "avgCheckUsd": 300.12,
      "cashCollectedTjs": 500,
      "cashCollectionsCount": 2,
      "cashTjs": 1000,
      "cogsTjs": 162008.1,
      "cogsUsd": 16200.81,
      "daily": [
        {
          "date": "2026-09-15",
          "profitUsd": 11410.23,
          "revenueUsd": 27611.04,
          "salesCount": 92,
        },
      ],
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "grossMarginPercent": 41.4,
      "netProfitTjs": 112966.7,
      "netProfitUsd": 11297.07,
      "profitTjs": 114200.7,
      "profitUsd": 11420.07,
      "refundPenaltiesUsd": 9.84,
      "refundsCount": 8,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "sellers": [
        {
          "profitUsd": 3103.41,
          "revenueUsd": 9303.72,
          "salesCount": 31,
          "sellerId": "seller-1",
          "sellerName": "Seller 1",
          "unitsSold": 31,
        },
        {
          "profitUsd": 5303.52,
          "revenueUsd": 9303.72,
          "salesCount": 31,
          "sellerId": "seller-0",
          "sellerName": "Seller 0",
          "unitsSold": 31,
        },
        {
          "profitUsd": 3003.3,
          "revenueUsd": 9003.6,
          "salesCount": 30,
          "sellerId": "seller-2",
          "sellerName": "Seller 2",
          "unitsSold": 30,
        },
      ],
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-0",
      "storeName": "Store 0",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M6",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M5",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M3",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M1",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M4",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M2",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M0",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 92,
      "unpaidExpensesTjs": 0,
    },
    {
      "avgCheckTjs": 3001.2,
      "avgCheckUsd": 300.12,
      "cashCollectedTjs": 0,
      "cashCollectionsCount": 0,
      "cashTjs": 1003,
      "cogsTjs": 162008.1,
      "cogsUsd": 16200.81,
      "daily": [
        {
          "date": "2026-09-15",
          "profitUsd": 11410.23,
          "revenueUsd": 27611.04,
          "salesCount": 92,
        },
      ],
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "grossMarginPercent": 41.4,
      "netProfitTjs": 112966.7,
      "netProfitUsd": 11297.07,
      "profitTjs": 114200.7,
      "profitUsd": 11420.07,
      "refundPenaltiesUsd": 9.84,
      "refundsCount": 8,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "sellers": [
        {
          "profitUsd": 5403.63,
          "revenueUsd": 9603.84,
          "salesCount": 32,
          "sellerId": "seller-0",
          "sellerName": "Seller 0",
          "unitsSold": 32,
        },
        {
          "profitUsd": 3003.3,
          "revenueUsd": 9003.6,
          "salesCount": 30,
          "sellerId": "seller-2",
          "sellerName": "Seller 2",
          "unitsSold": 30,
        },
        {
          "profitUsd": 3003.3,
          "revenueUsd": 9003.6,
          "salesCount": 30,
          "sellerId": "seller-1",
          "sellerName": "Seller 1",
          "unitsSold": 30,
        },
      ],
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-3",
      "storeName": "Store 3",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M2",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M3",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M1",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M0",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M5",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M6",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M4",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 92,
      "unpaidExpensesTjs": 0,
    },
    {
      "avgCheckTjs": 3001.2,
      "avgCheckUsd": 300.12,
      "cashCollectedTjs": 0,
      "cashCollectionsCount": 0,
      "cashTjs": 1004,
      "cogsTjs": 164008.2,
      "cogsUsd": 16400.82,
      "daily": [
        {
          "date": "2026-09-15",
          "profitUsd": 11210.22,
          "revenueUsd": 27611.04,
          "salesCount": 92,
        },
      ],
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "grossMarginPercent": 40.6,
      "netProfitTjs": 110966.6,
      "netProfitUsd": 11097.06,
      "profitTjs": 112200.6,
      "profitUsd": 11220.06,
      "refundPenaltiesUsd": 9.84,
      "refundsCount": 8,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "sellers": [
        {
          "profitUsd": 3103.41,
          "revenueUsd": 9303.72,
          "salesCount": 31,
          "sellerId": "seller-1",
          "sellerName": "Seller 1",
          "unitsSold": 31,
        },
        {
          "profitUsd": 5103.51,
          "revenueUsd": 9303.72,
          "salesCount": 31,
          "sellerId": "seller-0",
          "sellerName": "Seller 0",
          "unitsSold": 31,
        },
        {
          "profitUsd": 3003.3,
          "revenueUsd": 9003.6,
          "salesCount": 30,
          "sellerId": "seller-2",
          "sellerName": "Seller 2",
          "unitsSold": 30,
        },
      ],
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-4",
      "storeName": "Store 4",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M4",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 14,
          "name": "Phone M3",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M2",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M0",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M5",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M1",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 12,
          "name": "Phone M6",
          "profitUsd": 1401.33,
          "revenueUsd": 3601.44,
        },
      ],
      "unitsSold": 92,
      "unpaidExpensesTjs": 0,
    },
    {
      "avgCheckTjs": 3001.2,
      "avgCheckUsd": 300.12,
      "cashCollectedTjs": 0,
      "cashCollectionsCount": 0,
      "cashTjs": 1005,
      "cogsTjs": 164008.2,
      "cogsUsd": 16400.82,
      "daily": [
        {
          "date": "2026-09-15",
          "profitUsd": 11210.22,
          "revenueUsd": 27611.04,
          "salesCount": 92,
        },
      ],
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "grossMarginPercent": 40.6,
      "netProfitTjs": 110966.6,
      "netProfitUsd": 11097.06,
      "profitTjs": 112200.6,
      "profitUsd": 11220.06,
      "refundPenaltiesUsd": 9.84,
      "refundsCount": 8,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "sellers": [
        {
          "profitUsd": 3103.41,
          "revenueUsd": 9303.72,
          "salesCount": 31,
          "sellerId": "seller-2",
          "sellerName": "Seller 2",
          "unitsSold": 31,
        },
        {
          "profitUsd": 5103.51,
          "revenueUsd": 9303.72,
          "salesCount": 31,
          "sellerId": "seller-0",
          "sellerName": "Seller 0",
          "unitsSold": 31,
        },
        {
          "profitUsd": 3003.3,
          "revenueUsd": 9003.6,
          "salesCount": 30,
          "sellerId": "seller-1",
          "sellerName": "Seller 1",
          "unitsSold": 30,
        },
      ],
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-5",
      "storeName": "Store 5",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M5",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 14,
          "name": "Phone M4",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M3",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M1",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M6",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M0",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 12,
          "name": "Phone M2",
          "profitUsd": 1401.33,
          "revenueUsd": 3601.44,
        },
      ],
      "unitsSold": 92,
      "unpaidExpensesTjs": 0,
    },
    {
      "avgCheckTjs": 3001.2,
      "avgCheckUsd": 300.12,
      "cashCollectedTjs": 0,
      "cashCollectionsCount": 0,
      "cashTjs": 1006,
      "cogsTjs": 162008.1,
      "cogsUsd": 16200.81,
      "daily": [
        {
          "date": "2026-09-15",
          "profitUsd": 11410.23,
          "revenueUsd": 27611.04,
          "salesCount": 92,
        },
      ],
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "grossMarginPercent": 41.4,
      "netProfitTjs": 112966.7,
      "netProfitUsd": 11297.07,
      "profitTjs": 114200.7,
      "profitUsd": 11420.07,
      "refundPenaltiesUsd": 9.84,
      "refundsCount": 8,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "sellers": [
        {
          "profitUsd": 5403.63,
          "revenueUsd": 9603.84,
          "salesCount": 32,
          "sellerId": "seller-0",
          "sellerName": "Seller 0",
          "unitsSold": 32,
        },
        {
          "profitUsd": 3003.3,
          "revenueUsd": 9003.6,
          "salesCount": 30,
          "sellerId": "seller-1",
          "sellerName": "Seller 1",
          "unitsSold": 30,
        },
        {
          "profitUsd": 3003.3,
          "revenueUsd": 9003.6,
          "salesCount": 30,
          "sellerId": "seller-2",
          "sellerName": "Seller 2",
          "unitsSold": 30,
        },
      ],
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-6",
      "storeName": "Store 6",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M6",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M3",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M1",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M0",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M5",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M4",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M2",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 92,
      "unpaidExpensesTjs": 0,
    },
    {
      "avgCheckTjs": 3001.2,
      "avgCheckUsd": 300.12,
      "cashCollectedTjs": 0,
      "cashCollectionsCount": 0,
      "cashTjs": 1009,
      "cogsTjs": 162008.1,
      "cogsUsd": 16200.81,
      "daily": [
        {
          "date": "2026-09-15",
          "profitUsd": 11410.23,
          "revenueUsd": 27611.04,
          "salesCount": 92,
        },
      ],
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "grossMarginPercent": 41.4,
      "netProfitTjs": 112966.7,
      "netProfitUsd": 11297.07,
      "profitTjs": 114200.7,
      "profitUsd": 11420.07,
      "refundPenaltiesUsd": 9.84,
      "refundsCount": 8,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "sellers": [
        {
          "profitUsd": 5303.52,
          "revenueUsd": 9303.72,
          "salesCount": 31,
          "sellerId": "seller-0",
          "sellerName": "Seller 0",
          "unitsSold": 31,
        },
        {
          "profitUsd": 3103.41,
          "revenueUsd": 9303.72,
          "salesCount": 31,
          "sellerId": "seller-2",
          "sellerName": "Seller 2",
          "unitsSold": 31,
        },
        {
          "profitUsd": 3003.3,
          "revenueUsd": 9003.6,
          "salesCount": 30,
          "sellerId": "seller-1",
          "sellerName": "Seller 1",
          "unitsSold": 30,
        },
      ],
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-9",
      "storeName": "Store 9",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M2",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M0",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M5",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M3",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M1",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M6",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M4",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 92,
      "unpaidExpensesTjs": 0,
    },
    {
      "avgCheckTjs": 3001.2,
      "avgCheckUsd": 300.12,
      "cashCollectedTjs": 0,
      "cashCollectionsCount": 0,
      "cashTjs": 1010,
      "cogsTjs": 164008.2,
      "cogsUsd": 16400.82,
      "daily": [
        {
          "date": "2026-09-15",
          "profitUsd": 11210.22,
          "revenueUsd": 27611.04,
          "salesCount": 92,
        },
      ],
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "grossMarginPercent": 40.6,
      "netProfitTjs": 110966.6,
      "netProfitUsd": 11097.06,
      "profitTjs": 112200.6,
      "profitUsd": 11220.06,
      "refundPenaltiesUsd": 9.84,
      "refundsCount": 8,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "sellers": [
        {
          "profitUsd": 3103.41,
          "revenueUsd": 9303.72,
          "salesCount": 31,
          "sellerId": "seller-1",
          "sellerName": "Seller 1",
          "unitsSold": 31,
        },
        {
          "profitUsd": 3103.41,
          "revenueUsd": 9303.72,
          "salesCount": 31,
          "sellerId": "seller-2",
          "sellerName": "Seller 2",
          "unitsSold": 31,
        },
        {
          "profitUsd": 5003.4,
          "revenueUsd": 9003.6,
          "salesCount": 30,
          "sellerId": "seller-0",
          "sellerName": "Seller 0",
          "unitsSold": 30,
        },
      ],
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-10",
      "storeName": "Store 10",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M2",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 14,
          "name": "Phone M3",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M0",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M6",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M5",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M1",
          "profitUsd": 1301.43,
          "revenueUsd": 3901.56,
        },
        {
          "count": 12,
          "name": "Phone M4",
          "profitUsd": 1601.34,
          "revenueUsd": 3601.44,
        },
      ],
      "unitsSold": 92,
      "unpaidExpensesTjs": 0,
    },
    {
      "avgCheckTjs": 3001.2,
      "avgCheckUsd": 300.12,
      "cashCollectedTjs": 0,
      "cashCollectionsCount": 0,
      "cashTjs": 1011,
      "cogsTjs": 164008.2,
      "cogsUsd": 16400.82,
      "daily": [
        {
          "date": "2026-09-15",
          "profitUsd": 11210.22,
          "revenueUsd": 27611.04,
          "salesCount": 92,
        },
      ],
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "grossMarginPercent": 40.6,
      "netProfitTjs": 110966.6,
      "netProfitUsd": 11097.06,
      "profitTjs": 112200.6,
      "profitUsd": 11220.06,
      "refundPenaltiesUsd": 9.84,
      "refundsCount": 8,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "sellers": [
        {
          "profitUsd": 3203.52,
          "revenueUsd": 9603.84,
          "salesCount": 32,
          "sellerId": "seller-2",
          "sellerName": "Seller 2",
          "unitsSold": 32,
        },
        {
          "profitUsd": 3003.3,
          "revenueUsd": 9003.6,
          "salesCount": 30,
          "sellerId": "seller-1",
          "sellerName": "Seller 1",
          "unitsSold": 30,
        },
        {
          "profitUsd": 5003.4,
          "revenueUsd": 9003.6,
          "salesCount": 30,
          "sellerId": "seller-0",
          "sellerName": "Seller 0",
          "unitsSold": 30,
        },
      ],
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-11",
      "storeName": "Store 11",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M4",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 14,
          "name": "Phone M3",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M6",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M2",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M1",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M5",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 12,
          "name": "Phone M0",
          "profitUsd": 1401.33,
          "revenueUsd": 3601.44,
        },
      ],
      "unitsSold": 92,
      "unpaidExpensesTjs": 0,
    },
    {
      "avgCheckTjs": 3001.2,
      "avgCheckUsd": 300.12,
      "cashCollectedTjs": 0,
      "cashCollectionsCount": 0,
      "cashTjs": 1012,
      "cogsTjs": 164008.2,
      "cogsUsd": 16400.82,
      "daily": [
        {
          "date": "2026-09-15",
          "profitUsd": 11210.22,
          "revenueUsd": 27611.04,
          "salesCount": 92,
        },
      ],
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "grossMarginPercent": 40.6,
      "netProfitTjs": 110966.6,
      "netProfitUsd": 11097.06,
      "profitTjs": 112200.6,
      "profitUsd": 11220.06,
      "refundPenaltiesUsd": 9.84,
      "refundsCount": 8,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "sellers": [
        {
          "profitUsd": 5103.51,
          "revenueUsd": 9303.72,
          "salesCount": 31,
          "sellerId": "seller-0",
          "sellerName": "Seller 0",
          "unitsSold": 31,
        },
        {
          "profitUsd": 3103.41,
          "revenueUsd": 9303.72,
          "salesCount": 31,
          "sellerId": "seller-2",
          "sellerName": "Seller 2",
          "unitsSold": 31,
        },
        {
          "profitUsd": 3003.3,
          "revenueUsd": 9003.6,
          "salesCount": 30,
          "sellerId": "seller-1",
          "sellerName": "Seller 1",
          "unitsSold": 30,
        },
      ],
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-12",
      "storeName": "Store 12",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M5",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 14,
          "name": "Phone M4",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M2",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M0",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M1",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M6",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 12,
          "name": "Phone M3",
          "profitUsd": 1401.33,
          "revenueUsd": 3601.44,
        },
      ],
      "unitsSold": 92,
      "unpaidExpensesTjs": 0,
    },
    {
      "avgCheckTjs": 3001.2,
      "avgCheckUsd": 300.12,
      "cashCollectedTjs": 0,
      "cashCollectionsCount": 0,
      "cashTjs": 1013,
      "cogsTjs": 164008.2,
      "cogsUsd": 16400.82,
      "daily": [
        {
          "date": "2026-09-15",
          "profitUsd": 11210.22,
          "revenueUsd": 27611.04,
          "salesCount": 92,
        },
      ],
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "grossMarginPercent": 40.6,
      "netProfitTjs": 110966.6,
      "netProfitUsd": 11097.06,
      "profitTjs": 112200.6,
      "profitUsd": 11220.06,
      "refundPenaltiesUsd": 9.84,
      "refundsCount": 8,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "sellers": [
        {
          "profitUsd": 3103.41,
          "revenueUsd": 9303.72,
          "salesCount": 31,
          "sellerId": "seller-2",
          "sellerName": "Seller 2",
          "unitsSold": 31,
        },
        {
          "profitUsd": 3103.41,
          "revenueUsd": 9303.72,
          "salesCount": 31,
          "sellerId": "seller-1",
          "sellerName": "Seller 1",
          "unitsSold": 31,
        },
        {
          "profitUsd": 5003.4,
          "revenueUsd": 9003.6,
          "salesCount": 30,
          "sellerId": "seller-0",
          "sellerName": "Seller 0",
          "unitsSold": 30,
        },
      ],
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-13",
      "storeName": "Store 13",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M5",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M4",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M2",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M0",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M6",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M1",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M3",
          "profitUsd": 1301.43,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 92,
      "unpaidExpensesTjs": 0,
    },
    {
      "avgCheckTjs": 3001.2,
      "avgCheckUsd": 300.12,
      "cashCollectedTjs": 0,
      "cashCollectionsCount": 0,
      "cashTjs": 1016,
      "cogsTjs": 164008.2,
      "cogsUsd": 16400.82,
      "daily": [
        {
          "date": "2026-09-15",
          "profitUsd": 11210.22,
          "revenueUsd": 27611.04,
          "salesCount": 92,
        },
      ],
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "grossMarginPercent": 40.6,
      "netProfitTjs": 110966.6,
      "netProfitUsd": 11097.06,
      "profitTjs": 112200.6,
      "profitUsd": 11220.06,
      "refundPenaltiesUsd": 9.84,
      "refundsCount": 8,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "sellers": [
        {
          "profitUsd": 3203.52,
          "revenueUsd": 9603.84,
          "salesCount": 32,
          "sellerId": "seller-1",
          "sellerName": "Seller 1",
          "unitsSold": 32,
        },
        {
          "profitUsd": 5003.4,
          "revenueUsd": 9003.6,
          "salesCount": 30,
          "sellerId": "seller-0",
          "sellerName": "Seller 0",
          "unitsSold": 30,
        },
        {
          "profitUsd": 3003.3,
          "revenueUsd": 9003.6,
          "salesCount": 30,
          "sellerId": "seller-2",
          "sellerName": "Seller 2",
          "unitsSold": 30,
        },
      ],
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-16",
      "storeName": "Store 16",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M1",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M2",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M6",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M4",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M0",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M3",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M5",
          "profitUsd": 1301.43,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 92,
      "unpaidExpensesTjs": 0,
    },
    {
      "avgCheckTjs": 3001.2,
      "avgCheckUsd": 300.12,
      "cashCollectedTjs": 0,
      "cashCollectionsCount": 0,
      "cashTjs": 1017,
      "cogsTjs": 164008.2,
      "cogsUsd": 16400.82,
      "daily": [
        {
          "date": "2026-09-15",
          "profitUsd": 11210.22,
          "revenueUsd": 27611.04,
          "salesCount": 92,
        },
      ],
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "grossMarginPercent": 40.6,
      "netProfitTjs": 110966.6,
      "netProfitUsd": 11097.06,
      "profitTjs": 112200.6,
      "profitUsd": 11220.06,
      "refundPenaltiesUsd": 9.84,
      "refundsCount": 8,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "sellers": [
        {
          "profitUsd": 3103.41,
          "revenueUsd": 9303.72,
          "salesCount": 31,
          "sellerId": "seller-2",
          "sellerName": "Seller 2",
          "unitsSold": 31,
        },
        {
          "profitUsd": 3103.41,
          "revenueUsd": 9303.72,
          "salesCount": 31,
          "sellerId": "seller-1",
          "sellerName": "Seller 1",
          "unitsSold": 31,
        },
        {
          "profitUsd": 5003.4,
          "revenueUsd": 9003.6,
          "salesCount": 30,
          "sellerId": "seller-0",
          "sellerName": "Seller 0",
          "unitsSold": 30,
        },
      ],
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-17",
      "storeName": "Store 17",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M3",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 14,
          "name": "Phone M2",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M1",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M6",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M0",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M4",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 12,
          "name": "Phone M5",
          "profitUsd": 1401.33,
          "revenueUsd": 3601.44,
        },
      ],
      "unitsSold": 92,
      "unpaidExpensesTjs": 0,
    },
    {
      "avgCheckTjs": 3001.2,
      "avgCheckUsd": 300.12,
      "cashCollectedTjs": 0,
      "cashCollectionsCount": 0,
      "cashTjs": 1018,
      "cogsTjs": 162008.1,
      "cogsUsd": 16200.81,
      "daily": [
        {
          "date": "2026-09-15",
          "profitUsd": 11410.23,
          "revenueUsd": 27611.04,
          "salesCount": 92,
        },
      ],
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "grossMarginPercent": 41.4,
      "netProfitTjs": 112966.7,
      "netProfitUsd": 11297.07,
      "profitTjs": 114200.7,
      "profitUsd": 11420.07,
      "refundPenaltiesUsd": 9.84,
      "refundsCount": 8,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "sellers": [
        {
          "profitUsd": 5303.52,
          "revenueUsd": 9303.72,
          "salesCount": 31,
          "sellerId": "seller-0",
          "sellerName": "Seller 0",
          "unitsSold": 31,
        },
        {
          "profitUsd": 3103.41,
          "revenueUsd": 9303.72,
          "salesCount": 31,
          "sellerId": "seller-1",
          "sellerName": "Seller 1",
          "unitsSold": 31,
        },
        {
          "profitUsd": 3003.3,
          "revenueUsd": 9003.6,
          "salesCount": 30,
          "sellerId": "seller-2",
          "sellerName": "Seller 2",
          "unitsSold": 30,
        },
      ],
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-18",
      "storeName": "Store 18",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M4",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 14,
          "name": "Phone M3",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M2",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M5",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M0",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M6",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 12,
          "name": "Phone M1",
          "profitUsd": 1401.33,
          "revenueUsd": 3601.44,
        },
      ],
      "unitsSold": 92,
      "unpaidExpensesTjs": 0,
    },
    {
      "avgCheckTjs": 3001.2,
      "avgCheckUsd": 300.12,
      "cashCollectedTjs": 0,
      "cashCollectionsCount": 0,
      "cashTjs": 1019,
      "cogsTjs": 164008.2,
      "cogsUsd": 16400.82,
      "daily": [
        {
          "date": "2026-09-15",
          "profitUsd": 11210.22,
          "revenueUsd": 27611.04,
          "salesCount": 92,
        },
      ],
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "grossMarginPercent": 40.6,
      "netProfitTjs": 110966.6,
      "netProfitUsd": 11097.06,
      "profitTjs": 112200.6,
      "profitUsd": 11220.06,
      "refundPenaltiesUsd": 9.84,
      "refundsCount": 8,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "sellers": [
        {
          "profitUsd": 3203.52,
          "revenueUsd": 9603.84,
          "salesCount": 32,
          "sellerId": "seller-1",
          "sellerName": "Seller 1",
          "unitsSold": 32,
        },
        {
          "profitUsd": 3003.3,
          "revenueUsd": 9003.6,
          "salesCount": 30,
          "sellerId": "seller-2",
          "sellerName": "Seller 2",
          "unitsSold": 30,
        },
        {
          "profitUsd": 5003.4,
          "revenueUsd": 9003.6,
          "salesCount": 30,
          "sellerId": "seller-0",
          "sellerName": "Seller 0",
          "unitsSold": 30,
        },
      ],
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-19",
      "storeName": "Store 19",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M5",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M2",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M1",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M6",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M4",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M3",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M0",
          "profitUsd": 1301.43,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 92,
      "unpaidExpensesTjs": 0,
    },
  ],
  "topSuppliersByDebt": [
    {
      "id": "supplier",
      "name": "Supplier",
      "totalDebtUsd": 123.45,
      "totalPaidUsd": 76.55,
      "totalPurchasedUsd": 200,
    },
  ],
  "totalSupplierDebtTjs": 1234.5,
  "totalSupplierDebtUsd": 123.45,
  "unitsSold": 1846,
}
`;

exports[`financial report query optimization preserves all totals > preserves the complete report for store-0 1`] = `
{
  "avgCheckTjs": 3001.2,
  "avgCheckUsd": 300.12,
  "cogsTjs": 162008.1,
  "cogsUsd": 16200.81,
  "daily": [
    {
      "date": "2026-09-15",
      "profitUsd": 11410.23,
      "revenueUsd": 27611.04,
      "salesCount": 92,
    },
  ],
  "exchangesCount": 0,
  "expensesTjs": 1234,
  "expensesUsd": 123,
  "freeDeviceBonusesInStock": 1,
  "giftDeviceProfitTjs": 33013.2,
  "giftDeviceProfitUsd": 3301.32,
  "giftDeviceUnitsSold": 11,
  "grossMarginPercent": 41.3,
  "grossProfitTjs": 114102.3,
  "grossProfitUsd": 11410.23,
  "mainWarehouseCashTjs": 345.67,
  "mainWarehouseCashUsd": 34.57,
  "mainWarehouseExpenses": {
    "expensesByCategory": [],
    "expensesTjs": 0,
    "expensesUsd": 0,
    "unpaidExpensesTjs": 0,
  },
  "mainWarehouseStockCostTjs": 1000.1,
  "mainWarehouseStockCostUsd": 100.01,
  "mainWarehouseStockCount": 2,
  "modelCounts": [
    {
      "cogsUsd": 2400.12,
      "count": 14,
      "name": "Phone M6",
      "profitUsd": 1801.56,
      "revenueUsd": 4201.68,
    },
    {
      "cogsUsd": 2200.11,
      "count": 13,
      "name": "Phone M5",
      "profitUsd": 1701.45,
      "revenueUsd": 3901.56,
    },
    {
      "cogsUsd": 2200.11,
      "count": 13,
      "name": "Phone M3",
      "profitUsd": 1701.45,
      "revenueUsd": 3901.56,
    },
    {
      "cogsUsd": 2200.11,
      "count": 13,
      "name": "Phone M1",
      "profitUsd": 1701.45,
      "revenueUsd": 3901.56,
    },
    {
      "cogsUsd": 2400.12,
      "count": 13,
      "name": "Phone M4",
      "profitUsd": 1501.44,
      "revenueUsd": 3901.56,
    },
    {
      "cogsUsd": 2400.12,
      "count": 13,
      "name": "Phone M2",
      "profitUsd": 1501.44,
      "revenueUsd": 3901.56,
    },
    {
      "cogsUsd": 2400.12,
      "count": 13,
      "name": "Phone M0",
      "profitUsd": 1501.44,
      "revenueUsd": 3901.56,
    },
  ],
  "netProfitTjs": 112966.7,
  "netProfitUsd": 11297.07,
  "periodCashBonusesTjs": 0,
  "periodCashBonusesUsd": 0,
  "periodFreeDeviceBonusesReceived": 1,
  "periodRefundPenaltiesTjs": 98.4,
  "periodRefundPenaltiesUsd": 9.84,
  "profitTjs": 114200.7,
  "profitUsd": 11420.07,
  "refundsCount": 8,
  "refundsRevenueUsd": 2400.96,
  "revenueTjs": 276110.4,
  "revenueUsd": 27611.04,
  "salesCount": 92,
  "sellers": [
    {
      "profitUsd": 3103.41,
      "revenueUsd": 9303.72,
      "salesCount": 31,
      "sellerId": "seller-1",
      "sellerName": "Seller 1",
      "unitsSold": 31,
    },
    {
      "profitUsd": 5303.52,
      "revenueUsd": 9303.72,
      "salesCount": 31,
      "sellerId": "seller-0",
      "sellerName": "Seller 0",
      "unitsSold": 31,
    },
    {
      "profitUsd": 3003.3,
      "revenueUsd": 9003.6,
      "salesCount": 30,
      "sellerId": "seller-2",
      "sellerName": "Seller 2",
      "unitsSold": 30,
    },
  ],
  "storeBreakdown": [
    {
      "avgCheckTjs": 3001.2,
      "avgCheckUsd": 300.12,
      "cashCollectedTjs": 500,
      "cashCollectionsCount": 2,
      "cashTjs": 1000,
      "cogsTjs": 162008.1,
      "cogsUsd": 16200.81,
      "daily": [
        {
          "date": "2026-09-15",
          "profitUsd": 11410.23,
          "revenueUsd": 27611.04,
          "salesCount": 92,
        },
      ],
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "grossMarginPercent": 41.4,
      "netProfitTjs": 112966.7,
      "netProfitUsd": 11297.07,
      "profitTjs": 114200.7,
      "profitUsd": 11420.07,
      "refundPenaltiesUsd": 9.84,
      "refundsCount": 8,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "sellers": [
        {
          "profitUsd": 3103.41,
          "revenueUsd": 9303.72,
          "salesCount": 31,
          "sellerId": "seller-1",
          "sellerName": "Seller 1",
          "unitsSold": 31,
        },
        {
          "profitUsd": 5303.52,
          "revenueUsd": 9303.72,
          "salesCount": 31,
          "sellerId": "seller-0",
          "sellerName": "Seller 0",
          "unitsSold": 31,
        },
        {
          "profitUsd": 3003.3,
          "revenueUsd": 9003.6,
          "salesCount": 30,
          "sellerId": "seller-2",
          "sellerName": "Seller 2",
          "unitsSold": 30,
        },
      ],
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-0",
      "storeName": "Store 0",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M6",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M5",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M3",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M1",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M4",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M2",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M0",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 92,
      "unpaidExpensesTjs": 0,
    },
  ],
  "topSuppliersByDebt": [
    {
      "id": "supplier",
      "name": "Supplier",
      "totalDebtUsd": 123.45,
      "totalPaidUsd": 76.55,
      "totalPurchasedUsd": 200,
    },
  ],
  "totalSupplierDebtTjs": 1234.5,
  "totalSupplierDebtUsd": 123.45,
  "unitsSold": 92,
}
`;

exports[`financial report query optimization preserves all totals > preserves the complete report for store-1 1`] = `
{
  "avgCheckTjs": 3001.2,
  "avgCheckUsd": 300.12,
  "cogsTjs": 166008.3,
  "cogsUsd": 16600.83,
  "daily": [
    {
      "date": "2026-09-15",
      "profitUsd": 11310.33,
      "revenueUsd": 27911.16,
      "salesCount": 93,
    },
  ],
  "exchangesCount": 0,
  "expensesTjs": 1234,
  "expensesUsd": 123,
  "freeDeviceBonusesInStock": 1,
  "giftDeviceProfitTjs": 30012,
  "giftDeviceProfitUsd": 3001.2,
  "giftDeviceUnitsSold": 10,
  "grossMarginPercent": 40.5,
  "grossProfitTjs": 113103.3,
  "grossProfitUsd": 11310.33,
  "mainWarehouseCashTjs": 345.67,
  "mainWarehouseCashUsd": 34.57,
  "mainWarehouseExpenses": {
    "expensesByCategory": [],
    "expensesTjs": 0,
    "expensesUsd": 0,
    "unpaidExpensesTjs": 0,
  },
  "mainWarehouseStockCostTjs": 1000.1,
  "mainWarehouseStockCostUsd": 100.01,
  "mainWarehouseStockCount": 2,
  "modelCounts": [
    {
      "cogsUsd": 2400.12,
      "count": 14,
      "name": "Phone M0",
      "profitUsd": 1801.56,
      "revenueUsd": 4201.68,
    },
    {
      "cogsUsd": 2200.11,
      "count": 13,
      "name": "Phone M5",
      "profitUsd": 1701.45,
      "revenueUsd": 3901.56,
    },
    {
      "cogsUsd": 2200.11,
      "count": 13,
      "name": "Phone M4",
      "profitUsd": 1701.45,
      "revenueUsd": 3901.56,
    },
    {
      "cogsUsd": 2600.13,
      "count": 14,
      "name": "Phone M1",
      "profitUsd": 1601.55,
      "revenueUsd": 4201.68,
    },
    {
      "cogsUsd": 2400.12,
      "count": 13,
      "name": "Phone M6",
      "profitUsd": 1501.44,
      "revenueUsd": 3901.56,
    },
    {
      "cogsUsd": 2400.12,
      "count": 13,
      "name": "Phone M3",
      "profitUsd": 1501.44,
      "revenueUsd": 3901.56,
    },
    {
      "cogsUsd": 2400.12,
      "count": 13,
      "name": "Phone M2",
      "profitUsd": 1501.44,
      "revenueUsd": 3901.56,
    },
  ],
  "netProfitTjs": 111955.4,
  "netProfitUsd": 11195.94,
  "periodCashBonusesTjs": 0,
  "periodCashBonusesUsd": 0,
  "periodFreeDeviceBonusesReceived": 1,
  "periodRefundPenaltiesTjs": 86.1,
  "periodRefundPenaltiesUsd": 8.61,
  "profitTjs": 113189.4,
  "profitUsd": 11318.94,
  "refundsCount": 7,
  "refundsRevenueUsd": 2100.84,
  "revenueTjs": 279111.6,
  "revenueUsd": 27911.16,
  "salesCount": 93,
  "sellers": [
    {
      "profitUsd": 3203.52,
      "revenueUsd": 9603.84,
      "salesCount": 32,
      "sellerId": "seller-1",
      "sellerName": "Seller 1",
      "unitsSold": 32,
    },
    {
      "profitUsd": 5103.51,
      "revenueUsd": 9303.72,
      "salesCount": 31,
      "sellerId": "seller-0",
      "sellerName": "Seller 0",
      "unitsSold": 31,
    },
    {
      "profitUsd": 3003.3,
      "revenueUsd": 9003.6,
      "salesCount": 30,
      "sellerId": "seller-2",
      "sellerName": "Seller 2",
      "unitsSold": 30,
    },
  ],
  "storeBreakdown": [
    {
      "avgCheckTjs": 3001.2,
      "avgCheckUsd": 300.12,
      "cashCollectedTjs": 0,
      "cashCollectionsCount": 0,
      "cashTjs": 1001,
      "cogsTjs": 166008.3,
      "cogsUsd": 16600.83,
      "daily": [
        {
          "date": "2026-09-15",
          "profitUsd": 11310.33,
          "revenueUsd": 27911.16,
          "salesCount": 93,
        },
      ],
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "grossMarginPercent": 40.6,
      "netProfitTjs": 111955.4,
      "netProfitUsd": 11195.94,
      "profitTjs": 113189.4,
      "profitUsd": 11318.94,
      "refundPenaltiesUsd": 8.61,
      "refundsCount": 7,
      "revenueTjs": 279111.6,
      "revenueUsd": 27911.16,
      "salesCount": 93,
      "sellers": [
        {
          "profitUsd": 3203.52,
          "revenueUsd": 9603.84,
          "salesCount": 32,
          "sellerId": "seller-1",
          "sellerName": "Seller 1",
          "unitsSold": 32,
        },
        {
          "profitUsd": 5103.51,
          "revenueUsd": 9303.72,
          "salesCount": 31,
          "sellerId": "seller-0",
          "sellerName": "Seller 0",
          "unitsSold": 31,
        },
        {
          "profitUsd": 3003.3,
          "revenueUsd": 9003.6,
          "salesCount": 30,
          "sellerId": "seller-2",
          "sellerName": "Seller 2",
          "unitsSold": 30,
        },
      ],
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-1",
      "storeName": "Store 1",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M0",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 14,
          "name": "Phone M1",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M5",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M4",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M6",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M3",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M2",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 93,
      "unpaidExpensesTjs": 0,
    },
  ],
  "topSuppliersByDebt": [
    {
      "id": "supplier",
      "name": "Supplier",
      "totalDebtUsd": 123.45,
      "totalPaidUsd": 76.55,
      "totalPurchasedUsd": 200,
    },
  ],
  "totalSupplierDebtTjs": 1234.5,
  "totalSupplierDebtUsd": 123.45,
  "unitsSold": 93,
}
`;
